# wlroots_screencopy_poc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: protocol_generator.cmake
src/: CMakeLists.txt  main.cpp
src/wayland/: wlroots_screen_capture.cpp  wlroots_screen_capture.hpp
